# archivistmcp

./: .env.example  .gitignore  ArchivistAPIQuickStart.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
docs/internal/: wire-audit-probes.md
scripts/: measure_session_projection_tokens.py  record_fixtures.py  smoke.py
src/archivist_mcp/: __main__.py  api_lists.py  cache.py  client.py  concurrency.py  config.py  journal_folders.py  logging_.py  projections.py  resources.py  server.py  validation.py
src/archivist_mcp/tools/: __init__.py  ask.py  journals.py  read_session.py  reads_helpers.py  search.py  wikilinks.py
tests/: __init__.py  conftest.py  constants.py  test_ask_archivist.py  test_cache.py  test_campaign_summary.py  test_concurrency.py  test_items.py  test_journals.py  test_links.py  test_logging.py  test_projections.py  test_read_session.py  test_resources.py  test_retry.py  test_search_entities.py  test_session_summary.py  test_validation.py  test_wikilinks.py
tests/fixtures/beat/: detail.json
tests/fixtures/campaign/: detail.json  links.json  stats.json
tests/fixtures/character/: detail.json  list.json
tests/fixtures/faction/: detail.json  list.json
tests/fixtures/item/: detail.json  list.json
tests/fixtures/journal/: detail.json  list.json
tests/fixtures/journal_folder/: detail.json  list.json
tests/fixtures/location/: detail.json  list.json
tests/fixtures/moment/: detail.json
tests/fixtures/quest/: detail.json  list.json
tests/fixtures/search/: mixed.json
tests/fixtures/session/: beats_list.json  cast_analysis.json  list.json  (+2 more)
