[project]
name = "archivist-mcp"
version = "0.1.0"
description = "MCP server exposing Archivist (myarchivist.ai) to Claude for D&D campaign management."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
archivist-mcp = "archivist_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archivist_mcp"]
